# quantum-lab

./: README.md  main.py  pyproject.toml
experiments/01_bell_state/: main.py
experiments/02_quantum_noise/: main.py
experiments/03_bit_flip_code/: main.py
experiments/04_syndrome_measurement/: main.py
experiments/05_bit_flip_qec_complete/: main.py
